[FIX] Fix overflow of preloader, fix syntax and convert css to less, cleanup less

--- a/assets/styles/less/common.less
+++ b/assets/styles/less/common.less
@@ -19,26 +19,17 @@ img {
     margin-right: auto;
 }
 
-/*.row {
-    margin-top: 20px;
-}*/
-
 .full-height {
     height: 100%;
 }
 
-.margin-top-20 {
-    margin-top: 20px;
-}
-
-
 div.login-container {
-    opacity: 0;
     .transition(opacity, 2s, ease);
-}
+    opacity: 0;
 
-div.login-container.starting {
-    opacity: 1;
+    &.starting {
+        opacity: 1;
+    }
 }
 
 .grey-tile {
@@ -46,68 +37,62 @@ div.login-container.starting {
     position: relative;
     padding-top: 15px;
     padding-bottom: 15px;
-}
 
-.grey-tile p {
-    margin-right: 20px;
-    margin-left: 20px;
-    font-size: 14px;
-}
+    p {
+        margin-right: 20px;
+        margin-left: 20px;
+        font-size: 14px;
+    }
 
-.grey-tile i {
-    float: left;
-    margin-right: 13px;
-}
-
-.card a,
-.card a:hover,
-.card a:active {
-    text-transform: none;
-    color: #000;
-}
-
-.card > .overflow {
-    .transition(all, 0.6s, linear);
-
-    position: absolute;
-    display: block;
-    background-color: #fff;
-    opacity: 0.86;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
+    i {
+        float: left;
+        margin-right: 13px;
+    }
 }
 
 .login-content {
+    position: relative;
     width:500px;
     border-top: 3px solid #26a69a;
     background-color: #fff;
     margin-left: auto;
     margin-right: auto;
     margin-top: 70px;
+
+    .overflow {
+        .transition(all, 0.6s, linear);
+
+        position: absolute;
+        top: 0;
+        display: block;
+        background-color: #fff;
+        opacity: 0.86;
+        z-index: 10;
+        width: 100%;
+        height: 100%;
+    }
+
+    .checkbox-item a {
+        color: #26a69a;
+    }
 }
 
-.tabs li.tab a {
-    color: #26a69a;
-}
+.tabs {
 
-.tabs .indicator {
-    background-color: #26a69a;
-}
+    li.tab a {
+        color: #26a69a;
 
-.tabs li.tab a:hover {
-    color: #b2dfdb;
+        &:hover {
+            color: #b2dfdb;
+        }
+    }
+
+    .indicator {
+        background-color: #26a69a;
+    }
 }
 
 .inscr-btn,
 .connexion-btn {
     text-align: center;
-}
-
-/*.login-content .btn {
-    background-color: #37474F;
-}*/
-
-.login-content .checkbox-item a {
-    color: #26a69a;
 }
